--- a/TranslateAndLearn/package.json
+++ b/TranslateAndLearn/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TranslateAndLearn",
+  "name": "translateandlearn",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,8 +11,14 @@
     "react-native": "0.56.0"
   },
   "devDependencies": {
+    "babel-eslint": "^9.0.0",
     "babel-jest": "23.4.2",
     "babel-preset-react-native": "^5",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "jest": "23.5.0",
     "react-test-renderer": "16.4.1"
   },
