--- a/TranslateAndLearn/.eslintrc.json
+++ b/TranslateAndLearn/.eslintrc.json
@@ -32,6 +32,7 @@
     "no-mixed-operators": 0,
     "react/no-array-index-key": 0,
     "camelcase": 0,
-    "no-underscore-dangle": 0
+    "no-underscore-dangle": 0,
+    "prefer-const": 0
   }
 }
