--- a/TranslateAndLearn/package.json
+++ b/TranslateAndLearn/package.json
@@ -7,8 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "lodash": "^4.17.10",
     "react": "16.4.1",
-    "react-native": "0.56.0"
+    "react-native": "0.56.0",
+    "react-native-elements": "^0.19.1",
+    "react-native-swipeable": "^0.6.0",
+    "react-native-vector-icons": "^5.0.0",
+    "react-navigation": "^2.12.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
