--- a/TranslateAndLearn/.eslintrc.json
+++ b/TranslateAndLearn/.eslintrc.json
@@ -33,6 +33,7 @@
     "react/no-array-index-key": 0,
     "camelcase": 0,
     "no-underscore-dangle": 0,
-    "prefer-const": 0
+    "prefer-const": 0,
+    "react/sort-comp": 0
   }
 }
