--- a/TranslateAndLearn/package.json
+++ b/TranslateAndLearn/package.json
@@ -17,7 +17,8 @@
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.12.1",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
