--- a/TranslateAndLearn/package.json
+++ b/TranslateAndLearn/package.json
@@ -12,7 +12,7 @@
     "prop-types": "^15.6.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "^1.0.0-beta5",
     "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.12.1",
